--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ chromadb==0.5.0
 streamlit==1.35.0
 pandas==2.0.2
 python-dotenv==1.0.0
+requests
+beautifulsoup4
+langchain_groq 
+pdfplumber
+python-docx
